# verr

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cmake.yml
channel_server/: CMakeLists.txt  README.md
channel_server/include/database/: account.hpp  channel_db.hpp
channel_server/include/network/: channel_client.hpp  internal_client.hpp
channel_server/include/network/handlers/: base.hpp  character.hpp  chat.hpp  combat.hpp  gmcp.hpp  handler.hpp  internal.hpp
channel_server/include/world/: collision_manager.hpp  dungeon_manager.hpp  dynamic_region_manager.hpp  entity_manager.hpp  location.hpp  position.hpp  region.hpp  region_manager.hpp  spawn_manager.hpp
channel_server/include/world/entities/: entity.hpp
channel_server/src/: test.c
channel_server/src/database/: account.cpp  channel_db.cpp
channel_server/src/network/: channel_client.cpp  channel_client.hpp  internal_client.cpp
channel_server/src/network/handlers/: base.cpp  character.cpp  chat.cpp  combat.cpp  gmcp.cpp  handler.cpp  internal.cpp
channel_server/src/world/: collision_manager.cpp  dungeon_manager.cpp  dynamic_region_manager.cpp  location.cpp  position.cpp  region.cpp  region_manager.cpp  spawn_manager.cpp
channel_server/tests/: CMakeLists.txt  test_1.cpp
core/: CMakeLists.txt
core/src/: buffer.cpp  packet.c  packet.cpp  packet_i.cpp  packet_o.cpp
shared/: CMakeLists.txt  README.md
shared/include/: cli_utils.h  extensions.h  file_reader.h  log.h  random.h
shared/src/: bcrypt.c  extensions.c  log.c  math2.cpp  random.c  test.c
tools/: CMakeLists.txt
(+25 files in other folders)
